# cookiecutter-django-wagtail

./: .gitignore  cookiecutter.json
bash/: setup-node.sh
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.project_slug}}/: .env  .gitignore  .pre-commit-config.yaml  package.json  package.project.json  poetry.toml  pyproject.toml  tailwind.config.js
{{cookiecutter.project_slug}}/config/: api_router.py  urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py
{{cookiecutter.project_slug}}/development/: install-development-packages.sh  install-pyutils-static-files.sh  npm-tw-admin-watch.sh  npm-tw-wagtail-watch.sh  runserver.sh  start-celery-beat.sh  start-celery-worker.sh
{{cookiecutter.project_slug}}/requirements/: base.txt  development.txt  local.txt  production.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/home/: apps.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/search/: apps.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/users/: urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/home/: urls.py  wagtail_api.py  wagtail_hooks.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/js/: filters.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/tailwind/: admin.css  global.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/admin/: base.html  base_site.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/wagtailadmin/: 404.html  admin_base.html  base.html  home.html  login.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/wagtailadmin/shared/: filters.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/wagtailadmin/tables/: cell.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  forms.py  models.py  urls.py
